--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>.link1</name>
+			<type>2</type>
+			<location>C:/Users/phwhitin/.gradle/caches/minecraft/net/minecraftforge/forge/1.8-11.14.1.1419/start</location>
+		</link>
+	</linkedResources>
 </projectDescription>
