updated to the most recent version of forge

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
-/bin/
-/build/
-/gradle/
-/CREDITS-fml.txt
-/forge-1.8-11.14.1.1419-changelog.txt
-/gradlew
-/gradlew.bat
-/LICENSE-fml.txt
-/MinecraftForge-Credits.txt
-/MinecraftForge-License.txt
-/README.txt
-/eclipse/
-/.gradle/
-/.settings/
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
