--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.1"
 }
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "1.1-rev0"
+group= "com.himself12794" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "powersAPI"
 
 minecraft {
     version = "1.8-11.14.3.1514"
