--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,11 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 // for people who want stable
 plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.1"
+	id "maven"
 }
 
 version = "1.1-rev0"
-group= "com.himself12794" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group= "com.himself12794"
 archivesBaseName = "powersAPI"
 
 minecraft {
