--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
-before_install: chmod +x gradlew
-install: gradlew build
-script: gradlew build
+before_install: chmod +x ./gradlew
+install: ./gradlew build
+script: ./gradlew build
