--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ version = "1.1-rev1"
 group = "com.himself12794"
 archivesBaseName = "powersAPI"
 
+compileJava.setSourceCompatibility('1.8')
+compileJava.setTargetCompatibility('1.8')
+
 minecraft {
     version = "1.8-11.14.3.1514"
     runDir = "run"
